--- a/css/index.css
+++ b/css/index.css
@@ -256,7 +256,7 @@ img .photo2 {
 /*第二屏*/
 
 .demo-content{
-    width: 50rem;
+    width: 43.5rem;
     height: 12.5rem;
    /* width: 800px;
     height: 200px;*/
@@ -279,7 +279,7 @@ img .photo2 {
     z-index: 2;
     width: 12.5rem;
     height: 9.375rem;
-    margin: 1.5625rem;
+    margin: 1rem;
     float: left;
     position: relative;
     outline: 0.125rem solid #efefef;
@@ -289,6 +289,13 @@ img .photo2 {
     cursor: pointer;
     visibility: hidden;
 }
+.demo-list .demo1,.demo-list .demo4 {
+    margin: 1rem 1rem 1rem 0;
+}
+.demo-list .demo3,.demo-list .demo6 {
+    margin: 1rem 0 1rem 1rem;
+}
+
 .demo_list li:before {
     z-index: -2;
     position: absolute;
@@ -624,13 +631,25 @@ img .photo2 {
 }
 
 
-@media screen and (max-width: 800px){
+@media screen and (max-width: 800px)and(min-width: 320px){
     html {
         font-size: 8px;
         -webkit-text-size-adjust: none;
     }
+
 }
 
+/*
+@media screen and (max-width:320px){
+    html {
+        font-size: 8px;
+        -webkit-text-size-adjust: none;
+    }
+    .tips{
+        display: none;
+    }
+}
+*/
 
 
 /*
