--- a/css/index.css
+++ b/css/index.css
@@ -256,7 +256,7 @@ img .photo2 {
 /*第二屏*/
 
 .demo-content{
-    width: 43.5rem;
+    width: 40.5rem;
     height: 12.5rem;
    /* width: 800px;
     height: 200px;*/
@@ -277,8 +277,8 @@ img .photo2 {
 
 .demo-box {
     z-index: 2;
-    width: 10.5rem;
-    height: 8rem;
+    width: 11.5rem;
+    height: 8.6rem;
     margin: 1rem;
     float: left;
     position: relative;
@@ -289,12 +289,12 @@ img .photo2 {
     cursor: pointer;
     visibility: hidden;
 }
-.demo-list .demo1,.demo-list .demo4 {
+/*.demo-list .demo1,.demo-list .demo4 {
     margin: 1rem 0.5rem 1rem 0;
 }
 .demo-list .demo3,.demo-list .demo6 {
     margin: 1rem 0 1rem 0.5rem;
-}
+}*/
 
 .demo_list li:before {
     z-index: -2;
@@ -323,8 +323,8 @@ img .photo2 {
     box-shadow: 0 0.5rem 1.25rem rgba(0, 0, 0, 0.6);
 }
 .demo-img{
-    width: 10.5rem;
-    height: 8rem;
+    width: 11.5rem;
+    height: 8.6rem;
 }
 .demo-hover {
     position: absolute;
